package br.com.ajf.learnjavadesignpatterns.nullable;

public abstract class AbstractCustomer
{
	protected String name;

	abstract boolean isNull();
	abstract String getName();
}
